<resources>
    <string name="app_name">PrizeVault</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_bedava">Bedava Katılım</string>
    <string name="menu_telefon">Telefon/Tablet Kazan</string>
    <string name="menu_tatil">Tatil Kazan</string>
    <string name="menu_yeni">Yeni Başlayanlar</string>
    <string name="menu_araba">Araba Kazan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>